# SPDX-FileCopyrightText: 2022 Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: 2022 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "rsd"
version = "1.4.0"
description = "This role provides a setup for the Research Software Directory."
authors = ["Tobias Huste <t.huste@hzdr.de>", "Norman Ziegner <norman.ziegner@ufz.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "==8.4.0"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "6.20.3", markers = "platform_system != 'Windows'" }
yamllint = "^1.32.0"
reuse = "^2.1.0"
molecule = "==6.0.2"
molecule-plugins = {version = "^23.5.0", extras = ["podman"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
